# pythia

./: .bandit  .dockerignore  .encryption_key  .env.example  .gitignore  .gitmodules  .pylintrc  .pylintrc.bak  DEPLOYMENT_PRODUCTION.md  Dockerfile  MASTER_SYSTEM_COMPENDIUM.md  MIGRATION_CHECKLIST.md  PROJECT_TREE_RELATIVE.txt  QUICKSTART.md  README.md  alembic.ini  analyze_repositories.py  build_extensions.py  check_db.py  cloud-init.sh  config.json  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  extract_code.py  fix-python-workspace.ps1  fix_dependencies.py  force_trade_validation.py  grafana-dashboard.json  ingest_core.py  interface_bridge.py  kill_ports.py  main.py  nexus_launcher.py  prometheus.yml  pyproject.toml  pyrightconfig.json  reset_capital.py  resilience.py  runs.json  (+13 more)
backend/: .coverage  .env.example  Dockerfile  Dockerfile.old  PROJECT_TREE_RELATIVE.txt  SECURITY_FIXES.py  alembic.ini  app_files.txt  asi_evolve_pythia_config.yaml  extracted_code.json  freqtrade_config.json  main.py  pyproject.toml  pytest_output_cleanup.txt  pytest_output_cleanup2.txt  pytest_output_cleanup3.txt  pythia_test.ps1  pythia_test.sh  scheduler_main.py  streamlit_app.py  verify_bus_isolation.py  verify_final_architecture.py  verify_live_connection.py  verify_system.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  add_auth_and_new_models.py
backend/app/adapters/: freqtrade_adapter.py
backend/app/agents/: specialized_agents.py
backend/app/api/: ai_status.py  auth.py  backtest.py  market_data.py  portfolio.py  predictions.py  trades.py
backend/app/core/: auth.py  circuit_breaker.py  config.py  cqrs.py  enhanced_trading_engine.py  enhanced_trading_engine_v2.py  errors.py  event_bus.py  idempotency.py  integrity.py  saga.py  signal_schema.yaml  structured_logging.py  telemetry.py  validators.py  websocket_auth.py
backend/app/db/: database.py  models.py
backend/app/domain/cognitive/: service.py
backend/app/domain/events/: sqlite_store.py
backend/app/domain/execution/: service.py
backend/app/domain/market_data/: service.py
backend/app/domain/strategy/: service.py
backend/app/infrastructure/: event_store.py
backend/app/infrastructure/idempotency/: memory_store.py  redis_store.py
backend/app/infrastructure/resilience/: circuit_breaker.py  simple_decorator.py
backend/app/ml/: __init__.py  ensemble.py  error_analyzer.py  onnx_engine.py  performance_prediction.py  reinforcement_learning.py
backend/app/services/: backtest_engine.py  cache_service.py  market_data.py  prometheus_metrics.py  redis_pubsub.py  stop_loss_manager.py  stop_loss_manager_v2.py  vector_store.py  websocket_manager.py
backend/app/services/ai_providers/: groq_client.py
backend/config/: pythia_params.yaml  pythia_params_evolved.yaml
backend/data/: asi_evolution_audit.jsonl
backend/docs/: MVP_STARTUP.md
backend/experiments/: apply_best_asi_config.py  pythia_quick_smoke.py  pythia_rl_eval.py
backend/scripts/: train_model.py
backend/src/pythia/: __init__.py  schemas.py
backend/src/pythia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/pythia/adapters/: alpaca_adapter.py  ccxt_adapter.py  freqtrade_adapter.py  ml_gate.py  pmxt_adapter.py  streamlit_app.py
backend/src/pythia/adapters/pages/: 1_Crypto.py  2_Forex.py  3_Stocks.py  4_Prediction_Markets.py
backend/src/pythia/api/v1/: ai_status.py  auth.py  backtest.py  dependencies.py  health.py  market_data.py  operator.py  paper_trading.py  portfolio.py  predictions.py  trades.py
backend/src/pythia/application/: asi_evolve.py  backtest_engine.py  cache_service.py  evolution_feedback.py  market_data.py  monthly_target_tracker.py  prometheus_metrics.py  redis_pubsub.py  shadow_evaluator.py  stop_loss_manager.py  stop_loss_manager_v2.py  vector_store.py  websocket_manager.py
backend/src/pythia/application/ai/: ensemble.py  error_analyzer.py  onnx_engine.py  performance_prediction.py  reinforcement_learning.py  (+2 more)
backend/src/pythia/core/: asset_class.py  auth.py  circuit_breaker.py  config.py  cqrs.py  enhanced_trading_engine.py  enhanced_trading_engine_v1_DEPRECATED.py  enhanced_trading_engine_v2.py  errors.py  event_bus.py  idempotency.py  integrity.py  neuro_symbolic.py  ports.py  risk_params.yaml  saga.py  structured_logging.py  telemetry.py  validators.py  websocket_auth.py
backend/src/pythia/infrastructure/: celery_app.py  event_store.py  orchestrator.py  tasks.py  trading_mode_router.py
backend/src/pythia/scripts/: final_health_check.py  smoke_test.py  test_alpaca_paper.py
backend/src/pythia/workers/: celery_app.py  evaluation.py  shadow_agent.py  tasks.py
backend/tests/: adversarial_stress_test.py  conftest.py  red_team_simulation.py  test_advanced_scenarios.py  test_ai_control_plane.py  test_asi_evolve.py  test_asset_class.py  test_auth.py  test_backtest_service.py  test_circuit_breaker.py  test_core_infrastructure.py  test_ensemble.py  test_idempotency.py  test_market_data.py  test_monthly_target.py  test_monthly_target_reward.py  test_paper_trading.py  test_security_fixes.py  test_stop_loss.py  test_stop_loss_service.py  test_thread_mvp.py  test_trading_engine.py  test_websocket.py  test_websocket_service.py
backend/tests/integration/: test_adapters.py  test_event_bus.py  test_pmxt_integration.py
backend/tests/unit/: test_prediction_markets.py  test_stop_loss_service.py
backend/user_data/hyperopts/: sample_hyperopt_loss.py
backend/user_data/notebooks/: strategy_analysis_example.ipynb
backend/user_data/strategies/: sample_strategy.py
(+101 files in other folders)
