[project]
name = "pythia"
version = "3.1.0"
description = "AI Trading Bot - SOTA 2026"
dependencies = [
    "freqtrade>=2024.11",
    "scikit-learn>=1.5.0",
    "pandas",
    "fastapi",
    "streamlit",
    "sqlalchemy",
    "redis",
    "groq",
    "weaviate-client",
    "chromadb",
    "ta",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "asyncio: Asyncio tests",
]

[tool.coverage.run]
source = ["pythia"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
